--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "arrowParens": "always",
   "printWidth": 100,
-  "semi": false
+  "semi": false,
+  "trailingComma":  "all",
+  "singleQuote":  true,
+  "tabWidth": 2
 }
