--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-scripts": "3.4.1",
     "shortid": "^2.2.15",
     "tweetnacl": "^1.0.3",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1"
   },
   "scripts": {
     "clean": "rm -rf build/ dist/",
