--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "end-of-stream": "^1.4.4",
     "extension-port-stream": "^1.0.0",
     "immutable-tuple": "^0.4.10",
+    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1",
     "is-stream": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
@@ -39,8 +40,7 @@
     "react-scripts": "3.4.1",
     "shortid": "^2.2.15",
     "tweetnacl": "^1.0.3",
-    "uuid": "^8.3.0",
-    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1"
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "clean": "rm -rf build/ dist/",
