Add eslint file and modify webpack

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@types/pump": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "bn.js": "^5.1.2",
@@ -19,6 +21,7 @@
     "copy-webpack-plugin": "^6.0.3",
     "debug": "^4.1.1",
     "end-of-stream": "^1.4.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "extension-port-stream": "^1.0.0",
     "immutable-tuple": "^0.4.10",
     "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1",
@@ -81,6 +84,8 @@
     "@types/theme-ui": "^0.3.6",
     "@types/uuid": "^8.3.0",
     "babel-plugin-emotion": "^10.0.33",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "react-app-rewired": "^2.1.6",
