--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "arrowParens": "always",
   "printWidth": 100,
-  "semi": false,
+  "semi": true,
   "trailingComma":  "all",
   "singleQuote":  true,
   "tabWidth": 2
