--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext", "es2016", "es2017"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -28,17 +21,14 @@
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
     "downlevelIteration": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["app/*"]
+    }
   },
-  "files": [
-    "app/popup/index.tsx"
-  ],
-  "includes": [
-    "./app/**/*.ts"
-  ],
-  "include": [
-    "app"
-  ],
+  "files": ["app/popup/index.tsx"],
+  "includes": ["./app/**/*.ts"],
+  "include": ["app"],
   "exclude": ["bin", "build", "node_modules"],
   "compileOnSave": false
 }
