--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "post-message-stream": "^3.0.0",
     "pump": "^3.0.0",
     "react": "^16.13.1",
+    "react-app-rewire-alias": "^1.1.7",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
