--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext", "es2016", "es2017"],
+    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext", "es2016", "es2017", "es2018"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,15 +21,11 @@
     "declaration": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "downlevelIteration": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["app/*"]
-    }
+    "downlevelIteration": true
   },
   "files": ["app/popup/index.tsx"],
   "includes": ["./app/**/*.ts"],
   "include": ["app"],
   "exclude": ["bin", "build", "node_modules"],
-  "compileOnSave": false
+  "compileOnSave": true
 }
