--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "arrowParens": "always",
   "printWidth": 100,
   "semi": true,
-  "trailingComma":  "all",
-  "singleQuote":  true,
+  "trailingComma": "all",
+  "singleQuote": false,
   "tabWidth": 2
 }
