--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
     "@project-serum/serum": "0.5.5",
     "@solana/spl-token": "^0.0.7",
     "@solana/web3.js": "0.71.9",
@@ -28,20 +32,22 @@
     "is-stream": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "nanoid": "^3.1.12",
     "notistack": "^0.9.17",
     "obj-multiplex": "^1.0.0",
     "post-message-stream": "^3.0.0",
     "pump": "^3.0.0",
-    "react": "^16.13.1",
+    "react": "17.0.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^4.3.1",
+    "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "recompose": "^0.30.0",
     "shortid": "^2.2.15",
     "tweetnacl": "^1.0.3",
     "uuid": "^8.3.0"
