--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,17 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext", "es2016", "es2017", "es2018"],
+    "target": "es6",
+    "lib": [
+      "es5",
+      "es6",
+      "dom",
+      "dom.iterable",
+      "esnext",
+      "es2016",
+      "es2017",
+      "es2018"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -24,9 +33,19 @@
     "outDir": "dist/lib",
     "downlevelIteration": true
   },
-  "files": ["app/popup/index.tsx"],
-  "includes": ["./app/**/*.ts"],
-  "include": ["app"],
-  "exclude": ["bin", "build", "node_modules"],
+  "files": [
+    "app/popup/index.tsx"
+  ],
+  "includes": [
+    "./app/**/*.ts"
+  ],
+  "include": [
+    "app"
+  ],
+  "exclude": [
+    "bin",
+    "build",
+    "node_modules"
+  ],
   "compileOnSave": true
 }
