[Extension] kick-off

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@project-serum/serum": "0.5.5",
+    "@reduxjs/toolkit": "^1.8.1",
     "@solana/spl-token": "^0.0.7",
     "@solana/web3.js": "0.71.9",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +18,7 @@
     "@types/pump": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "bignumber.js": "^9.0.2",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "bn.js": "^5.1.2",
@@ -44,11 +46,17 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recompose": "^0.30.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "shortid": "^2.2.15",
+    "styled-components": "^5.3.5",
     "tweetnacl": "^1.0.3",
     "uuid": "^8.3.0"
   },
@@ -88,8 +96,10 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
+    "@types/styled-components": "^5.1.25",
     "@types/theme-ui": "^0.3.6",
     "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.16.4",
     "babel-plugin-emotion": "^10.0.33",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
