--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,10 @@
       "@inpage/*": ["app/inpage/*"],
       "@popup/*": ["app/popup/*"],
       "@model/*": ["app/model/*"],
-      "@services/*": ["app/services/*"]
+      "@services/*": ["app/services/*"],
+      "@module/*": ["app/popup/module/*"],
+      "@theme/*": ["app/popup/theme/*"],
+      "@components/*": ["app/popup/components/*"]
     }
   }
 }
