--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.4",
+    "@mui/material": "^5.6.0",
+    "@mui/styles": "^5.6.2",
     "@project-serum/serum": "0.5.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@solana/spl-token": "^0.0.7",
