--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@solana/web3.js": "0.71.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@types/node": "14.0.27",
     "@types/pump": "^1.1.0",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "bignumber.js": "^9.0.2",
@@ -36,9 +38,11 @@
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "nanoid": "^3.1.12",
-    "notistack": "^0.9.17",
+    "notistack": "^2.0.4",
     "obj-multiplex": "^1.0.0",
+    "password-validator": "^5.2.1",
     "post-message-stream": "^3.0.0",
     "pump": "^3.0.0",
     "react": "17.0.1",
@@ -52,6 +56,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
@@ -59,7 +64,7 @@
     "shortid": "^2.2.15",
     "styled-components": "^5.3.5",
     "tweetnacl": "^1.0.3",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "clean": "rm -rf build/ dist/",
@@ -94,7 +99,7 @@
     "@types/mocha": "^8.0.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.25",
