--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "lib": [
       "es5",
       "es6",
@@ -10,7 +10,8 @@
       "esnext",
       "es2016",
       "es2017",
-      "es2018"
+      "es2018",
+      "ES2020"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -33,10 +34,10 @@
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
     "downlevelIteration": true,
-    "noFallthroughCasesInSwitch": true,
     "typeRoots": [
       "./node_modules/@types",
-      "global.d.ts"
+      "global.d.ts",
+      "types"
     ]
   },
   "files": [
@@ -47,6 +48,7 @@
   ],
   "include": [
     "app",
+    "types",
     "global.d.ts"
   ],
   "exclude": [
