--- a/app/popup/public/manifest.json
+++ b/app/popup/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Solana Wallet",
-  "name": "Solana Wallet",
+  "short_name": "Incognito Wallet",
+  "name": "Incognito Wallet",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
