--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
@@ -28,12 +29,13 @@
     "bs58": "^4.0.1",
     "buffer-layout": "^1.2.0",
     "copy-webpack-plugin": "^6.0.3",
+    "customize-cra": "^1.0.0",
     "debug": "^4.1.1",
     "end-of-stream": "^1.4.4",
     "eslint-plugin-prettier": "^4.0.0",
     "extension-port-stream": "^1.0.0",
     "immutable-tuple": "^0.4.10",
-    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1",
+    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1.32",
     "is-stream": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
