--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@testing-library/react": "^9.3.2",
     "@types/node": "14.0.27",
     "@types/pump": "^1.1.0",
+    "@types/recompose": "^0.30.10",
     "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.3.5",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "bignumber.js": "^9.0.2",
@@ -59,6 +61,7 @@
     "react-scripts": "3.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
