--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
     "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
     "moment": "^2.29.3",
     "nanoid": "^3.1.12",
     "notistack": "^2.0.4",
