--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "password-validator": "^5.2.1",
     "post-message-stream": "^3.0.0",
     "pump": "^3.0.0",
+    "qrcode.react": "^3.0.2",
     "react": "17.0.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-copy-to-clipboard": "^5.0.2",
@@ -104,6 +105,7 @@
     "@types/chrome": "^0.0.122",
     "@types/jest": "^26.0.8",
     "@types/mocha": "^8.0.0",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.24",
