--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "password-validator": "^5.2.1",
     "post-message-stream": "^3.0.0",
     "pump": "^3.0.0",
-    "qrcode.react": "^3.0.2",
     "react": "17.0.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^4.3.1",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^8.0.1",
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
@@ -105,7 +105,6 @@
     "@types/chrome": "^0.0.122",
     "@types/jest": "^26.0.8",
     "@types/mocha": "^8.0.0",
-    "@types/qrcode.react": "^1.0.2",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.24",
