--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "extension-port-stream": "^1.0.0",
     "immutable-tuple": "^0.4.10",
-    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1.50",
+    "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1.51",
     "is-stream": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
@@ -115,6 +115,7 @@
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.16.4",
     "babel-plugin-emotion": "^10.0.33",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "mini-css-extract-plugin": "^0.9.0",
