--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "reduxed-chrome-storage": "^2.5.0",
     "reselect": "^4.1.5",
     "shortid": "^2.2.15",
     "styled-components": "^5.3.5",
