--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "react-helmet": "^6.1.0",
     "react-markdown": "^4.3.1",
     "react-qr-code": "^2.0.7",
-    "react-redux": "^8.0.1",
+    "react-redux": "7.2.1",
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.5",
+    "redux": "4.0.5",
     "redux-form": "^8.3.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -103,7 +103,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
     "@svgr/webpack": "^5.4.0",
     "@types/bs58": "^4.0.1",
-    "@types/chrome": "^0.0.122",
+    "@types/chrome": "^0.0.193",
     "@types/jest": "^26.0.8",
     "@types/mocha": "^8.0.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
