--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "popup",
-  "version": "0.2.0",
+  "name": "incognito_extension",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.18.0",
