--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.2",
-    "@project-serum/serum": "0.5.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -24,18 +23,13 @@
     "@typescript-eslint/parser": "^5.20.0",
     "@vespaiach/axios-fetch-adapter": "^0.3.0",
     "bignumber.js": "^9.0.2",
-    "bip32": "^2.0.5",
-    "bip39": "^3.0.2",
-    "bn.js": "^5.1.2",
     "bs58": "^4.0.1",
-    "buffer-layout": "^1.2.0",
     "copy-webpack-plugin": "^6.0.3",
     "customize-cra": "^1.0.0",
     "debug": "^4.1.1",
     "end-of-stream": "^1.4.4",
     "eslint-plugin-prettier": "^4.0.0",
     "extension-port-stream": "^1.0.0",
-    "immutable-tuple": "^0.4.10",
     "incognito-chain-web-js": "https://github.com/incognitochain/incognito-chain-web-js#4.4.1.66",
     "is-stream": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
@@ -104,6 +98,7 @@
     "@types/bs58": "^4.0.1",
     "@types/chrome": "^0.0.193",
     "@types/jest": "^26.0.8",
+    "@types/lodash": "^4.14.184",
     "@types/mocha": "^8.0.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-helmet": "^6.1.0",
